--- a/canny_edge_app/templates/index.html
+++ b/canny_edge_app/templates/index.html
@@ -10,6 +10,10 @@
     <h1>Upload an Image</h1>
     <form method="post" enctype="multipart/form-data" action="/upload">
         <input type="file" name="file" required>
+        <label for="threshold1">Threshold 1:</label>
+        <input type="number" id="threshold1" name="threshold1" value="100" required>
+        <label for="threshold2">Threshold 2:</label>
+        <input type="number" id="threshold2" name="threshold2" value="200" required>
         <input type="submit" value="Upload">
     </form>
 </body>
