--- a/canny_edge_app/templates/index.html
+++ b/canny_edge_app/templates/index.html
@@ -7,14 +7,23 @@
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-    <h1>Upload an Image</h1>
-    <form method="post" enctype="multipart/form-data" action="/upload">
-        <input type="file" name="file" required>
-        <label for="threshold1">Threshold 1:</label>
-        <input type="number" id="threshold1" name="threshold1" value="100" required>
-        <label for="threshold2">Threshold 2:</label>
-        <input type="number" id="threshold2" name="threshold2" value="200" required>
-        <input type="submit" value="Upload">
-    </form>
+    <div class="container">
+        <h1>Upload an Image</h1>
+        <form method="post" enctype="multipart/form-data" action="/upload">
+            <input type="file" name="file" required><br><br>
+            
+            <label for="threshold1_1">Threshold 1 (Pair 1):</label>
+            <input type="number" id="threshold1_1" name="threshold1_1" value="50" required><br>
+            <label for="threshold2_1">Threshold 2 (Pair 1):</label>
+            <input type="number" id="threshold2_1" name="threshold2_1" value="250" required><br><br>
+            
+            <label for="threshold1_2">Threshold 1 (Pair 2):</label>
+            <input type="number" id="threshold1_2" name="threshold1_2" value="100" required><br>
+            <label for="threshold2_2">Threshold 2 (Pair 2):</label>
+            <input type="number" id="threshold2_2" name="threshold2_2" value="200" required><br><br>
+            
+            <input type="submit" value="Upload">
+        </form>
+    </div>
 </body>
 </html>
