--- a/canny_edge_app/templates/index.html
+++ b/canny_edge_app/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Upload an Image</h1>
+        <h1>Compare two Images</h1>
         <form method="post" enctype="multipart/form-data" action="/upload">
             <input type="file" name="file" required><br><br>
             
@@ -24,6 +24,9 @@
             
             <input type="submit" value="Upload">
         </form>
+        <br>
+        <h1>OR</h1>
+        <button class="button" onclick="location.href='/slider'">Use Slider</button>
     </div>
 </body>
 </html>
